--- a/app/css/gridster.css
+++ b/app/css/gridster.css
@@ -28,7 +28,7 @@
 .gridster {
 	visibility: hidden;
     margin: 0 auto;
-    padding: 40px 0 140px 0;
+    padding: 40px 0 0 0;
 
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
